# santiago

./: .envrc  .gitignore  Cargo.toml  README.md  TODO.md  buildkite.yaml  flake.nix
.reuse/: dep5
examples/: calculator.rs  nix.rs
glr/: README.md
glr/crates/santiago/: Cargo.toml
glr/crates/santiago/examples/: main.rs
glr/crates/santiago/src/: lib.rs
glr/crates/santiago_dag/: Cargo.toml
glr/crates/santiago_dag/src/: lib.rs
glr/crates/santiago_lexer/: Cargo.toml
glr/crates/santiago_lexer/src/: cursor_movement.rs  lex.rs  lexeme.rs  lexer.rs  lexer_instruction.rs  lib.rs  matched_input.rs
glr/crates/santiago_macros/: Cargo.toml
glr/crates/santiago_macros/src/: lib.rs
glr/crates/santiago_parser/: Cargo.toml
glr/crates/santiago_parser/src/: lib.rs  parse.rs  parser_action.rs  parser_instruction.rs
glr/crates/santiago_sorted_vec/: Cargo.toml
glr/crates/santiago_sorted_vec/src/: lib.rs
glr/crates/santiago_types/: Cargo.toml
glr/crates/santiago_types/src/: lib.rs  production.rs  symbol.rs
src/: column.rs  forest.rs  lexer.rs  lib.rs  parse.rs  position.rs  production.rs  rule.rs  symbol.rs
src/grammar/: associativity.rs  builder.rs  disambiguation.rs  grammar_builder.rs  grammar_rule.rs  mod.rs  production.rs  rule.rs  symbol.rs
src/languages/: calculator.rs  mod.rs  nix.rs
src/lex/: lexeme.rs  lexer.rs  mod.rs  position.rs
src/lexer/: builder.rs  lexeme.rs  lexer_builder.rs  lexer_error.rs  lexer_rule.rs  lexer_rules.rs  mod.rs  position.rs  rule.rs
src/parse/: column.rs  forest.rs  mod.rs  parse.rs  state.rs
src/parser/: column.rs  forest.rs  mod.rs  parse.rs  parse_error.rs  parser_column.rs  parser_state.rs  state.rs  tree.rs
src2/: forest.rs  grammar_builder.rs  lexeme.rs  lexeme_kind.rs  lib.rs  parse_state.rs  parser.rs  position.rs  rule.rs  symbol.rs
tests/: run.rs
tests/ambiguous_integer_addition/: grammar.rs  lexer.rs
tests/ambiguous_integer_addition/cases/addition/: earley  forest  input  lexemes  parse_trees
tests/ambiguous_integer_addition/cases/int/: parse_trees
tests/calculator/: grammar.rs  grammar_with_value.rs  lexer.rs  mod.rs
tests/calculator/cases/example/: earley  forest  input  lexemes  parse_trees
tests/calculator_with_ast/: grammar.rs
tests/calculator_with_ast/cases/example/: asts  earley  parse_trees
tests/calculator_with_value/: eval.rs  grammar.rs  lexer.rs
tests/calculator_with_value/cases/example/: values
tests/integer_addition/: grammar.rs  lexer.rs  mod.rs
tests/integer_addition/cases/addition/: forest  parse_trees
tests/integer_addition/cases/int/: earley  forest
tests/integer_addition_with_ast/: grammar.rs
tests/integer_addition_with_ast/cases/addition/: asts.license  earley  input  lexemes
tests/integer_addition_with_ast/cases/int/: lexemes
tests/integer_addition_with_value/: eval.rs  grammar.rs  lexer.rs
tests/integer_addition_with_value/cases/addition/: forest  values
tests/integer_addition_with_value/cases/int/: earley  values
tests/javascript_string_interpolation/: grammar.rs  lexer.rs  mod.rs
tests/javascript_string_interpolation/cases/multiple/: earley  forest  input  lexemes  parse_trees
tests/javascript_string_interpolation/cases/string/: earley  forest  lexemes  parse_trees
tests/language_calculator/cases/example/: earley  forest  input
tests/nix/: grammar.rs  lexer.rs
tests/nix/cases/lib/: earley  (+3 more)
tests/smallest/: grammar.rs  lexer.rs
(+27 files in other folders)
