[dependencies]
regex = { version = "1", optional = true }

[features]
default = ["regular-expressions"]
regular-expressions = ["regex"]

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
categories = [
  "parsing",
  "algorithms",
  "compilers",
  "parser-implementations",
  "text-processing"
]
description = "A lexing and parsing toolkit for Rust"
edition = "2021"
keywords = ["parser", "api", "framework", "text", "serialization"]
license = "GPL-3.0-only"
name = "santiago"
repository = "https://github.com/kamadorueda/santiago"
version = "0.3.1"
