[dependencies.crate_regex]
default-features = false
features = ["std", "perf-dfa", "perf-inline", "unicode"]
optional = true
package = "regex"
version = "1"

[features]
default = ["crate_regex", "language_nix"]
language_nix = []

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
categories = [
  "parsing",
  "algorithms",
  "compilers",
  "parser-implementations",
  "text-processing"
]
description = "A lexing and parsing toolkit for Rust"
edition = "2021"
keywords = ["parser", "api", "framework", "text", "serialization"]
license = "GPL-3.0-only"
name = "santiago"
repository = "https://github.com/kamadorueda/santiago"
version = "0.12.0"

[profile.release]
codegen-units = 1
lto = true
